<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">大晴天</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="title_plaza">精选</string>
	<!-- 主界面 -->
	<string name="main_bar_item0">热门</string>
	<string name="main_bar_item1">目的地</string>
	<string name="main_bar_item2">我的旅行</string>
	<string name="main_bar_item3">关注</string>
	<string name="main_bar_item4">我</string>
		
	<!-- 我的旅行标签 -->
	 <string name="pull_to_refresh">下拉可以刷新</string>
	 <string name="release_to_refresh">释放立即刷新</string>
	 <string name="refreshing">正在刷新…</string>
	 <string name="not_updated_yet">暂未更新过</string>
	 <string name="updated_at">上次更新于%1$s前</string>
	 <string name="updated_just_now">刚刚更新</string>
	 <string name="time_error">时间有问题</string>
	 
	 <string name="title_diary">我的旅行</string>
	 
	 <!-- 关注标签 -->
	 <string name="title_friend">关注</string>
	 <string name="friend_circle">驴友圈</string>
	 <string name="friend_my">我的驴友</string>
	 <string name="friend_blog">最新日志</string>
	 <string name="friend_trave">最新游记</string>
	 <string name="friend_line">最新线路</string>
	 
	 <!-- 添加日志界面 -->
	 <string name="blog_edit">添加日志</string>
	 <string name="blog_title_right">取消</string>
	 
	 <string name="blog_menu_1">拍照</string>
	 <string name="blog_menu_2">从手机相册选取</string>
	 <string name="blog_menu_3">取消</string>
	 
	 <string name="blog_content">日志内容：</string>
	 <string name="blog_edit_tip">请输入</string>
	 <string name="blog_date">旅行日期：</string>
	 <string name="blog_scenery">途径景点：</string>
	 <string name="blog_zone">旅游区域：</string>
	 <string name="blog_gps">GPS位置：</string>
	 <string name="blog_acount">选择账号：</string>
	<string name="blog_level">日志评级：</string>
	 <string name="blog_theme">选择日志主题：</string>
	 
	 <string name="blog_date_tips">点击选取</string>
	 <string name="blog_scenery_tips">多个景点用逗号隔开</string>
	 <string name="blog_zone_tips">点击选择</string>
	 <string name="blog_gps_tips">点击获取</string>
	 <string name="blog_acount_tips">点击选择</string>
	 
	 <string name="pic_selector_title">相册</string>
	 <string name="pic_selector_bottom_left">所有图片</string>
	 <string name="pic_selector_bottom_right">完成</string>
	 
	 <string name="blog_tag_0">风景</string>
	 <string name="blog_tag_1">美食</string>
	 <string name="blog_tag_2">民俗</string>
	 <string name="blog_tag_3">特产</string>
	 <string name="blog_tag_4">住宿</string>
	 <string name="blog_tag_5">交通</string>
	 <string name="blog_tag_6">门票</string>
	 <string name="blog_tag_7">攻略</string>
	 
	 <string name="blog_btn_save">保存为草稿</string>
</resources>
