<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/blog_edit_bg"
    android:orientation="vertical" >
    
  	<include layout = "@layout/titlebar_blog_edit"/>
  	
	<ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:clipToPadding="true"
		    android:paddingTop="10dp"
		    android:paddingBottom="10dp"
		    android:paddingLeft="@dimen/view_gap_horizontal"
		    android:paddingRight="@dimen/view_gap_horizontal"
		    android:orientation="vertical" >

			<!-- 网格显示图片 行列间距5dp 每列宽度90dp -->
		    <GridView
		        android:id="@+id/gridView1"
		        android:layout_width="fill_parent"
		        android:layout_height="@dimen/add_img_height"
		        android:background="#eeeeee"
		        android:numColumns="4"
		        android:columnWidth="90dp"
		        android:stretchMode="columnWidth"
		        android:gravity="center" >
		    </GridView>
	        	
		    <TextView
		        android:id="@+id/textView1"
		        android:paddingTop="10dp"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/black"
		        android:textSize="20dp"
		        android:text="@string/blog_content" />
		
		    <EditText
		        android:id="@+id/et_edit"
		        android:layout_width="match_parent"
		        android:layout_height="120dp"
		        android:layout_weight="0.15"
		        android:textColor="@color/black"
		        android:background="@drawable/edittext_bg"
		        android:ems="10"
		        android:textSize="18dp"
		        android:gravity="top"
		        android:inputType="textMultiLine"
		        android:minLines="4" >
		
		        <!-- <requestFocus />  -->
		    </EditText>
		
		    <TableLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:collapseColumns="2"   
		        >
		        <TableRow
		            android:id="@+id/tableRow1"
		            android:paddingTop="10dp"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content" >
		            <TextView
		                android:id="@+id/textView2"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:textColor="@color/black"
		                android:textSize="18dp"
		                android:text="@string/blog_date" />
		            <EditText
		                android:id="@+id/et_date"
		                android:layout_width="fill_parent"
		                android:layout_height="wrap_content"
		                android:layout_weight="1"
		                android:textColor="@color/black"
		                android:ems="10"
		                android:background="@color/white"
		                android:textSize="18dp"
		                android:hint="@string/blog_date_tips"
	                 	android:windowSoftInputMode="adjustUnspecified|stateHidden"
		                android:inputType="date" />
		        </TableRow>
		
		        <TableRow
		            android:id="@+id/tableRow2"
		            android:paddingTop="10dp"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content" >
		            <TextView
		                android:id="@+id/textView3"
		           		android:textColor="@color/black"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:textSize="18dp"
		                android:text="@string/blog_scenery" />
		            <EditText
		                android:id="@+id/et_scenery"
		                android:layout_width="fill_parent"
		                android:layout_height="wrap_content"
		                android:textColor="@color/black"
		                android:background="@color/white"
		                android:layout_weight="1"
		                android:textSize="18dp"
		                android:hint="@string/blog_scenery_tips"
		                android:ems="10" />
		        </TableRow>
		
		        <TableRow
		            android:id="@+id/tableRow3"
		            android:paddingTop="10dp"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content" >
					<TextView
		                android:id="@+id/tv_zone"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:textColor="@color/black"
		                android:textSize="18dp"
		                android:text="@string/blog_zone" />
		            <EditText
		                android:id="@+id/et_zone"
		                android:layout_width="fill_parent"
		                android:layout_height="wrap_content"
		                android:textColor="@color/black"
		                android:background="@color/white"
		                android:layout_weight="1"
		                android:textSize="18dp"
		                android:hint="@string/blog_zone_tips"
		                android:ems="10" />
		        </TableRow>
		        
		        <TableRow
		            android:id="@+id/tableRow4"
		            android:paddingTop="10dp"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content" >
					<TextView
		                android:id="@+id/textView4"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:textColor="@color/black"
		                android:textSize="18dp"
		                android:text="@string/blog_gps" />
		            <EditText
		                android:id="@+id/et_gps"
		                android:layout_width="fill_parent"
		                android:layout_height="wrap_content"
		                android:textColor="@color/black"
		                android:background="@color/white"
		                android:layout_weight="1"
		                android:textSize="18dp"
		                android:hint="@string/blog_gps_tips"
		                android:ems="10" />
		        </TableRow>
		        
				<TableRow
		            android:id="@+id/tableRow5"
		            android:paddingTop="10dp"
		            android:layout_width="fill_parent"
		            android:textColor="@color/black"
		            android:layout_height="wrap_content" >
					<TextView
		                android:id="@+id/textView5"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:textColor="@color/black"
		                android:textSize="18dp"
		                android:text="@string/blog_acount" />
		            <EditText
		                android:id="@+id/et_acount"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:textColor="@color/black"
		                android:background="@color/white"
		                android:layout_weight="1"
		                android:textSize="18dp"
		                android:hint="@string/blog_acount_tips"
		                android:ems="10" >
					</EditText>
		        </TableRow>
		
		    </TableLayout>
	    </LinearLayout>
	</ScrollView>
</LinearLayout>