<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       	android:background="@color/white"
        android:orientation="vertical" >
        <LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="50dp" 
	            android:clickable="true"
	            >
	            <ImageView
	                android:id="@+id/imageView1"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center_vertical"
	                android:paddingLeft="14dp"
	                android:src="@drawable/dqtwait" />
	            <TextView
	                android:id="@+id/textView1"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center_vertical"
	                android:textColor="@color/black"
	                android:paddingLeft="14dp"
	                android:text="@string/friend_circle"
	                android:textAppearance="?android:attr/textAppearanceMedium" />
	        </LinearLayout>
	        
			<LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="50dp" 
	            android:clickable="true"
	            >
	            <ImageView
	                android:id="@+id/imageView2"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center_vertical"
	                android:paddingLeft="14dp"
	                android:src="@drawable/friend" />
	            <TextView
	                android:id="@+id/textView2"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center_vertical"
	                android:textColor="@color/black"
	                android:paddingLeft="14dp"
	                android:text="@string/friend_my"
	                android:textAppearance="?android:attr/textAppearanceMedium" />
	        </LinearLayout>
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="50dp" 
	            android:clickable="true"
	            >
	            <ImageView
	                android:id="@+id/imageView3"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center_vertical"
	                android:paddingLeft="14dp"
	                android:src="@drawable/blog" />
	            <TextView
	                android:id="@+id/textView3"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center_vertical"
	                android:textColor="@color/black"
	                android:paddingLeft="14dp"
	                android:text="@string/friend_blog"
	                android:textAppearance="?android:attr/textAppearanceMedium" />
	        </LinearLayout>
    </LinearLayout>
    

</ScrollView>
